# py_dss_interface

./: .appveyor.yml  .bumpversion.cfg  .cookiecutterrc  .coveragerc  .gitignore  .readthedocs.yml  .travis.yml  1-py-dss-interfece_in_google-colab.ipynb  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst  LICENSE  MANIFEST.in  OpenDSSC_Commit.txt  OpenDSSLinuxCPPForRepo.sh  README.md  README.rst  README_delete.rst  Shammya_test.py  Usage.ipynb  build.py  build_delete.py  generator_vsource.py  line_example.py  line_impedance.py  my_script.py  pyproject.toml  pyproject_delete.toml  pytest.ini  requirements.txt  script_tests.py  script_version_2.py  setup.cfg  setup.py  setup_temp.py  tox.ini
.github/workflows/: ci.yml
.ipynb_checkpoints/: Usage-checkpoint.ipynb
OpenDSSC/: CMakeLists.txt  CMakePresets.json  compile
OpenDSSC/CMD/: OpenDSSC.cpp  OpenDSSC.h
OpenDSSC/Common/: AutoAdd.cpp  AutoAdd.h  Bus.cpp  Bus.h  Circuit.cpp  Circuit.h  CktElement.cpp  CktElement.h  CktElementClass.cpp  CktElementClass.h  Conductor.cpp  Conductor.h  ControlQueue.cpp  ControlQueue.h  DSSCallBackRoutines.cpp  DSSCallBackRoutines.h  DSSCallBackStructDef.cpp  DSSCallBackStructDef.h  DSSClass.cpp  DSSClass.h  DSSClassDefs.cpp  DSSClassDefs.h  DSSGlobals.cpp  DSSGlobals.h  Diakoptics.cpp  Diakoptics.h  EventQueue.h  ExportCIMXML.cpp  ExportCIMXML.h  ExportResults.cpp  ExportResults.h  Feeder.cpp  Feeder.h  GraphProperties.h  MeTIS_Exec.cpp  MeTIS_Exec.h  Notes.cpp  Notes.h  ShowResults.cpp  ShowResults.h  (+17 more)
OpenDSSC/Controls/: CapControl.cpp  CapControl.h  CapControlVars.cpp  CapControlVars.h  CapUserControl.cpp  CapUserControl.h  ControlActionsDefs.h  ControlClass.cpp  ControlClass.h  ControlElem.cpp  ControlElem.h  ESPVLControl.cpp  ESPVLControl.h  ExpControl.cpp  ExpControl.h  GenDispatcher.cpp  GenDispatcher.h  InvControl.cpp  InvControl.h  Recloser.cpp  Recloser.h  RegControl.cpp  RegControl.h  Relay.cpp  Relay.h  StorageController.cpp  StorageController.h  SwtControl.cpp  SwtControl.h  UPFCControl.cpp  UPFCControl.h  VVControl.cpp  VVControl.h
OpenDSSC/DLL/: OpenDSSCDLL.cpp  OpenDSSCDLL.h
OpenDSSC/Executive/: ConnectOptions.cpp  ConnectOptions.h  ExecCommands.cpp  ExecCommands.h  ExecHelper.cpp  ExecHelper.h  ExecOptions.cpp  ExecOptions.h  Executive.cpp  Executive.h  ExportOptions.cpp  ExportOptions.h  PlotOptions.cpp  PlotOptions.h  ShowOptions.cpp  ShowOptions.h
OpenDSSC/Forms/: CmdForms.cpp  CmdForms.h  myCmdUtils.cpp  myCmdUtils.h
OpenDSSC/GISCommands/: GISCommands.cpp  GISCommands.h
OpenDSSC/GenModels/: gencls.cpp  gencls.h  genrou.cpp  genrou.h
OpenDSSC/General/: CNData.cpp  CNData.h  CNLineConstants.cpp  CNLineConstants.h  CableConstants.cpp  CableConstants.h  (+42 more)
OpenDSSC/klusolve/: CMakeLists.txt  License.txt  Makefile  Readme.txt
OpenDSSC/klusolve/AMD/Source/: amd_i_1.c  amd_i_2.c  amd_i_aat.c  amd_i_control.c  amd_i_defaults.c  amd_i_dump.c  amd_i_info.c  amd_i_order.c  amd_i_post_tree.c  amd_i_postorder.c  amd_i_preprocess.c  amd_i_valid.c  amd_l_1.c  amd_l_2.c  amd_l_aat.c  amd_l_control.c  amd_l_defaults.c  amd_l_dump.c  amd_l_info.c  amd_l_order.c  amd_l_post_tree.c  amd_l_postorder.c  amd_l_preprocess.c  amd_l_valid.c
OpenDSSC/klusolve/BTF/Source/: btf_l_maxtrans.c  btf_l_order.c  btf_l_strongcomp.c
OpenDSSC/klusolve/COLAMD/Source/: colamd_l.c
OpenDSSC/klusolve/CZSparse/: Makefile
OpenDSSC/klusolve/KLU/: Makefile
OpenDSSC/klusolve/KLU/Source/: klu_l.c  klu_l_analyze.c  klu_l_analyze_given.c  klu_l_defaults.c  klu_l_diagnostics.c  klu_l_dump.c  klu_l_extract.c  klu_l_factor.c  klu_l_free_numeric.c  klu_l_free_symbolic.c  klu_l_kernel.c  klu_l_memory.c  klu_l_refactor.c  klu_l_scale.c  klu_l_solve.c  klu_l_sort.c  klu_l_tsolve.c  klu_z.c  klu_z_diagnostics.c  klu_z_dump.c  klu_z_extract.c  klu_z_factor.c  klu_z_free_numeric.c  klu_z_kernel.c  klu_z_refactor.c  klu_z_scale.c  klu_z_solve.c  klu_z_sort.c  klu_z_tsolve.c  klu_zl.c  klu_zl_diagnostics.c  klu_zl_dump.c  klu_zl_extract.c  klu_zl_factor.c  klu_zl_free_numeric.c  klu_zl_kernel.c  klu_zl_refactor.c  klu_zl_scale.c  klu_zl_solve.c  klu_zl_sort.c  (+1 more)
OpenDSSC/klusolve/KLUSolve/: Makefile  ReadMe.txt  klusolve.def
OpenDSSC/klusolve/KLUSolve/Demo/: Makefile  klusolve_demo.cpp
OpenDSSC/klusolve/KLUSolve/Include/: klusolve.h  klusystem.h
OpenDSSC/klusolve/KLUSolve/Source/: KLUSolve.cpp  KLUSystem.cpp
OpenDSSC/klusolve/UFconfig/: UFconfig.mk
ci/: bootstrap.py
docs/: api_reference.rst  conf.py  index.rst  modules.rst  py_dss_interface.rst  requirements.txt  usage.html  usage.rst
document/: circuit_interface.py  circuit_interface_PR.py  similar_to_COM.py  similar_to_com_PR.py  text_interface.py  text_interface_PR.py
examples/: 00_Example_Active.py  00_Example_Active_Class_methods.py  01_Example_Bus.py  01_Example_Bus_Class_methods.py  02_Example_Capacitors.py  02_Example_Capacitors_Class_methods.py  03_Example_CapControls.py  03_Example_CapControls_Class_methods.py  04_Example_Circuit.py  04_Example_Circuit_Class_methods.py  05_Example_CktElement.py  05_Example_CktElement_Class_methods.py  06_Example_CMathLib.py  06_Example_CMathLib_Class_methods.py  07_Example_CtrlQueue.py  07_Example_CtrlQueue_Class_methods.py  08_Example_DSSElement.py  08_Example_DSSElement_Class_methods.py  09_Example_DSSExecutive.py  09_Example_Meters.py  10_Example_DSSInterface.py  10_Example_DSSInterface_Class_methods.py  11_Example_DSSProgress.py  11_Example_DSSProgress_Class_methods.py  12_Example_DSSProperties.py  12_Example_DSSProperties_Class_methods.py  13_Example_Fuses.py  14_Example_Generators.py  14_Example_Generators_Class_Methods.py  15_Example_ISources.py  16_Example_LineCodes.py  17_Example_Lines.py  18_Example_Loads.py  19_Example_LoadShapes.py  19_Example_LoadShapes_Class_Methods.py  1_py_dss_interface_in_google_colab.ipynb  1_py_dss_interfece_in_google_colab.ipynb  20_Example_Meters.py  21_Example_Monitors.py  22_Example_Parallel.py  (+8 more)
linux/: Build_Linux_doc.md  DownloadOpenDSSColabLinuxVersion.ipynb  Test.ipynb  build_manylinux_wheels.sh
samples/: sample_00.py
tests/: conftest.py  test_py_dss_interface.py
(+808 files in other folders)
