[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "py-dss-interface"
version = "2.2.1"
description = "Python interface for controlling OpenDSS Powered by EPRI."
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Paulo Radatz", email = "paulo.radatz@gmail.com"}
]
dependencies = [
]
requires-python = ">=3.9"
keywords = ["OpenDSS", "Python", "Power Systems", "Distribution Systems", "Energy"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "sphinx-rtd-theme",
  "nbsphinx",
  "black",
  "pre-commit",
  "tox",
  "twine",
  "ipython",
  "flake8"
]


[project.urls]
"Documentation" = "https://py_dss_interface.readthedocs.io/"
"Changelog" = "https://py_dss_interface.readthedocs.io/en/latest/changelog.html"
"Issue Tracker" = "https://github.com/PauloRadatz/py_dss_interface/issues"
"Source" = "https://github.com/PauloRadatz/py_dss_interface"

[tool.setuptools]
packages = { find = {where = ["src"]} }

[tool.setuptools.package-data]
"py_dss_interface" = [
  "opendss_official/**/*",
  "opendss_official/windows/delphi/x64/*.dll",
  "opendss_official/windows/delphi/x86/*.dll",
  "opendss_official/windows/cpp/x64/*.dll",
  "opendss_official/windows/cpp/x86/*.dll",
  "opendss_official/linux/cpp/*.so",
  "opendss_official/linux/google_colab/*.so",
  "opendss_official/linux/google_colab/*.txt",
  "opendss_official/linux/google_colab/libOpenDSSC.so",
  "opendss_official/linux/google_colab/libklusolve_all.so",
  "opendss_official/linux/google_colab/libklusolve_all.so.0",
  "opendss_official/linux/google_colab/libklusolve_all.so.0.0.0",
  "opendss_official/linux/google_colab/versions.txt"
]
